keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: keycloak
  annotations:
    cert-manager.io/issuer: my-ca-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    #nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  proxy_set_header Host $host;
    #  proxy_set_header X-Forwarded-Proto: https;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keycloak.abc.com
      secretName: keycloak-tls-secret
  rules:
  - host: keycloak.abc.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example-kc-service 
            #name: services 
            port:
              #number: 8080
              number: 8443
